--- a/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
@@ -186,7 +186,7 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="EmailAddress" class="form-label">Email Address</label>
-                                                <input type="email" class="form-control" id="EmailAddress" pattern="[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" title="Please enter a valid email address." name="EmailAddress" value="@Model?.EmailAddress" required />
+                                                <input type="email" class="form-control" id="EmailAddress"  title="Please enter a valid email address." name="EmailAddress" value="@Model?.EmailAddress" required />
                                                 <small class="text-success" id="addAnotherEmail" onclick="toggleEmailField()" style="cursor: pointer;">
                                                     <i class="bi bi-plus-circle"></i> Add another email  +
                                                 </small>
@@ -197,7 +197,7 @@
                                         <div class="col-sm-6 col-md-3" id="additionalEmailField" style="display: none;">
                                             <div class="mb-3">
                                                 <label for="EmailAddress2" class="form-label">Email Address2</label>
-                                                <input type="email" class="form-control" id="EmailAddress2" pattern="[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" title="Please enter a valid email address." value="@Model?.EmailAddress2" name="EmailAddress2" required />
+                                                <input type="email" class="form-control" id="EmailAddress2"  title="Please enter a valid email address." value="@Model?.EmailAddress2" name="EmailAddress2" required />
                                             </div>
                                         </div>
 
@@ -205,7 +205,7 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="PhoneNumber" class="form-label">Phone Number</label>
-                                                <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" value="@Model?.PhoneNumber" required pattern="/^\(\d{3}\)\d{7}$/" title="Please enter a valid phone number in the format (123)4567890." oninput="validateNumberInput(this)" />
+                                                <input type="number" class="form-control" id="PhoneNumber" name="PhoneNumber" value="@Model?.PhoneNumber" required pattern="/^(\+{0,})(\d{0,})([(]{1}\d{1,3}[)]{0,}){0,}(\s?\d+|\+\d{2,3}\s{1}\d+|\d+){1}[\s|-]?\d+([\s|-]?\d+){1,2}(\s){0,}$/gm" title="Please enter a valid phone number." oninput="validateNumberInput(this)" />
                                                 <small class="text-success" id="addAnotherPhone" onclick="togglePhoneField()" style="cursor: pointer;">
                                                     <i class="bi bi-plus-circle"></i> Add another phone  +
                                                 </small>
@@ -216,7 +216,7 @@
                                         <div class="col-sm-6 col-md-3" id="additionalPhoneField" style="display: none;">
                                             <div class="mb-3">
                                                 <label for="PhoneNumber2" class="form-label">Phone Number2</label>
-                                                <input type="text" class="form-control" id="PhoneNumber2" name="PhoneNumber2" value="@Model?.PhoneNumber2" required pattern="/^\(\d{3}\)\d{7}$/" title="Please enter a valid phone number in the format (123)4567890." oninput="validateNumberInput(this)" />
+                                                <input type="number" class="form-control" id="PhoneNumber2" name="PhoneNumber2" value="@Model?.PhoneNumber2" required pattern="/^(\+{0,})(\d{0,})([(]{1}\d{1,3}[)]{0,}){0,}(\s?\d+|\+\d{2,3}\s{1}\d+|\d+){1}[\s|-]?\d+([\s|-]?\d+){1,2}(\s){0,}$/gm" title="Please enter a valid phone number." oninput="validateNumberInput(this)" />
                                             </div>
                                         </div>
 
@@ -237,7 +237,7 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Address">Address</label>
-                                                <input type="text" class="form-control" id="Address" name="Address" value="@Model?.Address" required maxlength="255" title="Address cannot be empty and must be shorter than 255 characters." />
+                                                <input type="text" class="form-control" id="Address" name="Address" placeholder="Enter Address"  value="@Model?.Address" required maxlength="255" title="Address cannot be empty and must be shorter than 255 characters." />
                                                 <div class="invalid-feedback">
                                                     Please provide a valid address.
                                                 </div>
@@ -246,25 +246,25 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Address2">Unit/Ap. #</label>
-                                                <input type="text" class="form-control" id="Address2" name="Address2" value="@Model?.Address2" />
+                                                <input type="text" class="form-control" id="Address2" name="Address2" value="@Model?.Address2" placeholder="Enter Address2" />
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Locality">City</label>
-                                                <input type="text" class="form-control" id="Locality" name="Locality" value="@Model?.Locality" />
+                                                <input type="text" class="form-control" id="Locality" name="Locality" value="@Model?.Locality" placeholder="Enter City" />
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Region">State / Region</label>
-                                                <input type="text" class="form-control" id="Region" name="Region" value="@Model?.Region" />
+                                                <input type="text" class="form-control" id="Region" name="Region" value="@Model?.Region" placeholder="Enter State/Region" />
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="PostalCode">Zip</label>
-                                                <input type="text" class="form-control" id="PostalCode" name="PostalCode" value="@Model?.PostalCode" />
+                                                <input type="number" class="form-control" id="PostalCode" name="PostalCode" value="@Model?.PostalCode" placeholder="Enter Zip Code" />
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-3">
@@ -362,23 +362,39 @@
             additionalEmailField.style.display = additionalEmailField.style.display === "none" ? "block" : "none";
         };
 
-         function validateEmail(email) {
-            const atSymbol = String.fromCharCode(64);
-            const pattern = new RegExp("^[a-zA-Z0-9._%+-]+" + atSymbol + "[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}$");
-        return pattern.test(email);
-    }
+        function validateEmail(email) {
+            var re = /\S+@@\S+\.\S+/;
+            return re.test(email);
+        }
 
         function validatePhoneNumber(phoneNumber) {
-            const pattern = /^\(\d{3}\)\d{7}$/;
+            const pattern = /^(\+{0,})(\d{0,})([(]{1}\d{1,3}[)]{0,}){0,}(\s?\d+|\+\d{2,3}\s{1}\d+|\d+){1}[\s|-]?\d+([\s|-]?\d+){1,2}(\s){0,}$/gm;
             return pattern.test(phoneNumber);
         }
 
 
-    function validateWebsite(website) {
-        const pattern = /^https?:\/\/[^\s$.?#].[^\s]*$/;
-        return pattern.test(website);
-    }
 
+        function validateFirstName(FirstName) {
+            return FirstName.trim().length > 0;
+        }
+
+        function validateLastName(LastName) {
+
+            return LastName.trim().length > 0;
+        }
+
+        function validateUnit(Unit) {
+
+            return Unit.trim().length > 0;
+        }
+
+        function validateRegion(Region) {
+            return Region.trim().length > 0;
+        }
+
+        function validatePostalCode(PostalCode) {
+            return PostalCode.trim().length > 0;
+        }
     function validateAddress(address) {
         return address.trim().length > 0;
     }
@@ -388,8 +404,33 @@
             toastr.error(message);
         }
 
+        function validateEmai2valid(emailAddress2) {
+            if (emailAddress2.trim().length > 0) {
+                var re = /\S+@@\S+\.\S+/;
+                return re.test(emailAddress2);
+            }
+            else {
+                return true;
+            }
+        }
 
-
+        function validateWebsite(website) {
+            if (website.trim().length > 0) {
+                var re = /^https?:\/\/[^\s$.?#].[^\s]*$/;
+                return re.test(website);
+            }
+            else {
+                return true;
+            }
+        }
+        function validateOrganizationName(OrganizationName) {
+            if (OrganizationName.trim().length > 0) {
+                return false;
+            }
+            else {
+                return true;
+            }
+        }
         function validateField(field, validatorFunc, errorMessage) {
             if (!validatorFunc(field.value)) {
                 showError(errorMessage); 
@@ -421,21 +462,31 @@
 
     // Collect input elements
     const emailAddress = document.getElementById('EmailAddress');
+        const OrganizationName = document.getElementById('OrganizationName');
     const emailAddress2 = document.getElementById('EmailAddress2');
     const phoneNumber = document.getElementById('PhoneNumber');
     const phoneNumber2 = document.getElementById('PhoneNumber2');
     const website = document.getElementById('Website');
     const address = document.getElementById('Address');
+        const FirstName = document.getElementById('FirstName');
+        const LastName = document.getElementById('LastName');
+        const Unit = document.getElementById('Address2');
+        const Region = document.getElementById('Region');
+        const PostalCode = document.getElementById('PostalCode');
 
         function checkValidationsAndSubmit() {
             const isEmailAddressValid = validateField(emailAddress, validateEmail, 'Please enter a valid email address.');
-            const isEmailAddress2Valid = validateField(emailAddress2, validateEmail, 'Please enter a valid email address.');
             const isPhoneNumberValid = validateField(phoneNumber, validatePhoneNumber, 'Please enter a valid phone number.');
-            const isPhoneNumber2Valid = validateField(phoneNumber2, validatePhoneNumber, 'Please enter a valid phone number.');
             const isWebsiteValid = validateField(website, validateWebsite, 'Please enter a valid website URL.');
             const isAddressValid = validateField(address, validateAddress, 'Address cannot be empty.');
-
-            if (isEmailAddressValid && isEmailAddress2Valid && isPhoneNumberValid && isPhoneNumber2Valid && isWebsiteValid && isAddressValid) {
+            const isEmail2Valid = validateField(emailAddress2, validateEmai2valid, 'Email address2 cannot be empty.');
+            const isFirstNameValid = validateField(FirstName, validateFirstName, 'FirstName cannot be empty.');
+            const isLastNameValid = validateField(LastName, validateLastName, 'LastName cannot be empty.');
+            const isUnitValid = validateField(Unit, validateUnit, 'Unit cannot be empty.');
+            const isRegionValid = validateField(Region, validateRegion, 'Region cannot be empty.');
+            const isOrganizationNameValid = validateField(OrganizationName, validateOrganizationName, 'Organization Name cannot be empty.');
+            const isPostalCodeValid = validateField(PostalCode, validatePostalCode, 'PostalCode cannot be empty.');
+            if (isEmailAddressValid && isPhoneNumberValid && isWebsiteValid && isAddressValid && isEmail2Valid && isFirstNameValid && isLastNameValid && isUnitValid && isRegionValid && isPostalCodeValid) {
                 
                 submitTenantForm(event);
             } else {
@@ -490,7 +541,7 @@
             if (response.ok) {
                 const result = await response.json();
                 console.log(result);
-                toastr.success('Operation successful');
+                toastr.success('Landlord save successful');
                 window.location.href = '/Landlord/Index';
             } else {
                 console.error('Server responded with non-OK status');
