--- a/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
@@ -120,7 +120,7 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="PhoneNumber" class="form-label">Phone Number</label>
-                                                <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" value="@Model?.PhoneNumber" required pattern="/^\(\d{3}\)\d{7}$/" placeholder="Enter phone number" title="Please enter a valid phone number in the format (123)4567890." />
+                                                <input type="number" class="form-control" id="PhoneNumber" name="PhoneNumber" value="@Model?.PhoneNumber" required pattern="/^(\+{0,})(\d{0,})([(]{1}\d{1,3}[)]{0,}){0,}(\s?\d+|\+\d{2,3}\s{1}\d+|\d+){1}[\s|-]?\d+([\s|-]?\d+){1,2}(\s){0,}$/gm" placeholder="Enter phone number" title="Please enter a phone number" />
                                                 <small class="text-success" id="addAnotherPhone" onclick="togglePhoneField()" style="cursor: pointer;">
                                                     <i class="bi bi-plus-circle"></i> Add another phone
                                                 </small>
@@ -131,7 +131,7 @@
                                         <div class="col-sm-6 col-md-3" id="additionalPhoneField" style="display: none;">
                                             <div class="mb-3">
                                                 <label for="PhoneNumber2" class="form-label">Phone Number2</label>
-                                                <input type="text" class="form-control" id="PhoneNumber2" name="PhoneNumber2" value="@Model?.PhoneNumber2" pattern="/^\(\d{3}\)\d{7}$/" placeholder="Enter another phone number" title="Please enter a valid phone number in the format (123)4567890." />
+                                                <input type="number" class="form-control" id="PhoneNumber2" name="PhoneNumber2" value="@Model?.PhoneNumber2" placeholder="Enter another phone number" title="Please enter a phone number" pattern="/^(\+{0,})(\d{0,})([(]{1}\d{1,3}[)]{0,}){0,}(\s?\d+|\+\d{2,3}\s{1}\d+|\d+){1}[\s|-]?\d+([\s|-]?\d+){1,2}(\s){0,}$/gm" />
                                             </div>
                                         </div>
 
@@ -139,7 +139,7 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="EmailAddress" class="form-label">Email Address</label>
-                                                <input type="email" class="form-control" id="EmailAddress" pattern="[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" placeholder="Enter email" title="Please enter a valid email address." name="EmailAddress" value="@Model?.EmailAddress" required />
+                                                <input type="email" class="form-control" id="EmailAddress" placeholder="Enter email" title="Please enter a email address." name="EmailAddress" value="@Model?.EmailAddress" required />
                                                 <small class="text-success" id="addAnotherEmail" onclick="toggleEmailField()" style="cursor: pointer;">
                                                     <i class="bi bi-plus-circle"></i> Add another email
                                                 </small>
@@ -150,17 +150,17 @@
                                         <div class="col-sm-6 col-md-3" id="additionalEmailField" style="display: none;">
                                             <div class="mb-3">
                                                 <label for="EmailAddress2" class="form-label">Email Address2</label>
-                                                <input type="email" class="form-control" id="EmailAddress2" pattern="[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" placeholder="Enter another email" title="Please enter a valid email address." value="@Model?.EmailAddress2" name="EmailAddress2" />
+                                                <input type="email" class="form-control" id="EmailAddress2"  placeholder="Enter another email" title="Please enter a email address." value="@Model?.EmailAddress2" name="EmailAddress2" />
                                             </div>
                                         </div>
 
                                         <!-- Tenant Nationality -->
-                                        <div class="col-sm-6 col-md-3">
+@*                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="TenantNationality" class="form-label">Tenant Nationality</label>
                                                 <input type="text" class="form-control" id="TenantNationality" name="TenantNationality" placeholder="Enter tenant nationality" value="@Model?.TenantNationality" required />
                                             </div>
-                                        </div>
+                                        </div> *@
 
                                     </div>
                                     <hr />
@@ -171,7 +171,7 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Address">Address</label>
-                                                <input type="text" class="form-control" id="Address" name="Address" value="@Model?.Address" required maxlength="255" title="Address cannot be empty and must be shorter than 255 characters." />
+                                                <input type="text" class="form-control" placeholder="Enter Address" id="Address" name="Address" value="@Model?.Address" required maxlength="255" title="Address cannot be empty and must be shorter than 255 characters." />
                                                 <div class="invalid-feedback">
                                                     Please provide a valid address.
                                                 </div>
@@ -180,37 +180,25 @@
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Address2">Address2</label>
-                                                <input type="text" class="form-control" id="Address2" name="Address2" value="@Model?.Address2" />
+                                                <input type="text" class="form-control" id="Address2" placeholder="Enter Address2" name="Address2" value="@Model?.Address2" />
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Unit">Unit/Ap. #</label>
-                                                <input type="text" class="form-control" id="Unit" name="Unit" value="@Model?.Unit" />
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6 col-md-3">
-                                            <div class="mb-3">
-                                                <label for="Locality">City</label>
-                                                <input type="text" class="form-control" id="Locality" name="Locality" value="@Model?.Locality" />
+                                                <input type="text" class="form-control" id="Unit" name="Unit" value="@Model?.Unit" placeholder="Enter Unit/Ap." />
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="Region">State / Region</label>
-                                                <input type="text" class="form-control" id="Region" name="Region" value="@Model?.Region" />
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6 col-md-3">
-                                            <div class="mb-3">
-                                                <label for="CountryCode">Country Code</label>
-                                                <input type="text" class="form-control" id="CountryCode" name="CountryCode" value="@Model?.CountryCode" />
+                                                <input type="text" class="form-control" id="Region" name="Region" value="@Model?.Region" placeholder="Enter Region" />
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
                                                 <label for="PostalCode">Zip</label>
-                                                <input type="text" class="form-control" id="PostalCode" name="PostalCode" value="@Model?.PostalCode" />
+                                                <input type="number" class="form-control" id="PostalCode" name="PostalCode" value="@Model?.PostalCode" placeholder="Enter Zip Code" />
                                             </div>
                                         </div>
                                         <!-- District -->
@@ -218,6 +206,12 @@
                                             <div class="mb-3">
                                                 <label for="District">District</label>
                                                 <input type="text" class="form-control" id="District" name="District" value="@Model?.District" placeholder="Enter district">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 col-md-3">
+                                            <div class="mb-3">
+                                                <label for="Locality">City</label>
+                                                <input type="text" class="form-control" id="Locality" name="Locality" value="@Model?.Locality" placeholder="Enter City" />
                                             </div>
                                         </div>
                                         <div class="col-sm-6 col-md-3">
@@ -246,7 +240,7 @@
                                         <div class="col-sm-6 col-md-3" id="emergencyContactField" style="display: none;">
                                             <div class="mb-3">
                                                 <label for="EmergencyContactInfo" class="form-label">Emergency Contact Info</label>
-                                                <input type="text" class="form-control" id="EmergencyContactInfo" name="EmergencyContactInfo" value="@Model?.EmergencyContactInfo" />
+                                                <input type="text" class="form-control" id="EmergencyContactInfo" name="EmergencyContactInfo" value="@Model?.EmergencyContactInfo" placeholder="Enter Emergency Contact" />
                                             </div>
 
                                         </div>
@@ -349,7 +343,7 @@
                                                     <div class="col-sm-6 col-md-3">
                                                         <div class="mb-3">
                                                             <label for="Vehicles_@(i)__Year">Year:</label>
-                                                            <input type="text" class="form-control" name="Vehicles[@i].Year" id="Vehicles_@(i)__Year" value="@vehicle.Year">
+                                                            <input type="number" class="form-control" name="Vehicles[@i].Year" id="Vehicles_@(i)__Year" value="@vehicle.Year">
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6 align-self-end">
@@ -673,7 +667,7 @@
             if (response.ok) {
                 const result = await response.json();
                 console.log(result);
-                toastr.success('Operation successful');
+                toastr.success('Tenant save successful');
                 window.location.href = '/Tenant/Index';
             } else {
                 console.error('Server responded with non-OK status');
@@ -686,38 +680,15 @@
     }
 
 
-
     function validateEmail(email) {
-        const atSymbol = String.fromCharCode(64);
-        const pattern = new RegExp("^[a-zA-Z0-9._%+-]+" + atSymbol + "[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}$");
-        return pattern.test(email);
-    }
+  var re = /\S+@@\S+\.\S+/;
+  return re.test(email);
+}
+  
 
     function validatePhoneNumber(phoneNumber) {
-        const pattern = /^\(\d{3}\)\d{7}$/;
+        const pattern = /^(\+{0,})(\d{0,})([(]{1}\d{1,3}[)]{0,}){0,}(\s?\d+|\+\d{2,3}\s{1}\d+|\d+){1}[\s|-]?\d+([\s|-]?\d+){1,2}(\s){0,}$/gm;
         return pattern.test(phoneNumber);
-    }
-
-    function validateAccountName(accountName) {
-        return accountName.trim().length > 0;
-    }
-
-    function validateAccountIBAN(accountIBAN) {
-      
-        return accountIBAN.trim().length > 0;
-    }
-
-    function validateAccountSwift(accountSwift) {
-    
-        return accountSwift.trim().length > 0;
-    }
-
-    function validateAccountBank(accountBank) {
-        return accountBank.trim().length > 0;
-    }
-
-    function validateAccountCurrency(accountCurrency) {
-        return accountCurrency.trim().length > 0;
     }
 
 
@@ -729,7 +700,27 @@
 
         toastr.error(message);
     }
+    function validateFirstName(FirstName) {
+        return FirstName.trim().length > 0;
+    }
 
+    function validateLastName(LastName) {
+
+        return LastName.trim().length > 0;
+    }
+
+    function validateUnit(Unit) {
+
+        return Unit.trim().length > 0;
+    }
+
+    function validateRegion(Region) {
+        return Region.trim().length > 0;
+    }
+
+    function validatePostalCode(PostalCode) {
+        return PostalCode.trim().length > 0;
+    }
 
 
     function validateField(field, validatorFunc, errorMessage) {
@@ -761,8 +752,19 @@
         "hideMethod": "fadeOut"
     };
 
-    // Collect input elements
 
+    function validateEmai2valid(emailAddress2) 
+    {
+        if (emailAddress2.trim().length > 0)
+        {
+            var re = /\S+@@\S+\.\S+/;
+            return re.test(emailAddress2);
+        }
+        else
+        {
+            return true;
+        }
+    }
 
     function checkValidationsAndSubmit(event) {
         debugger;
@@ -771,28 +773,24 @@
         const emailAddress = document.getElementById('EmailAddress');
         const emailAddress2 = document.getElementById('EmailAddress2');
         const phoneNumber = document.getElementById('PhoneNumber');
-        const phoneNumber2 = document.getElementById('PhoneNumber2');
         const website = document.getElementById('Website');
         const address = document.getElementById('Address');
-        const accountName = document.getElementById('Account_Name');
-        const accountIBAN = document.getElementById('Account_IBAN');
-        const accountSwift = document.getElementById('Account_Swift');
-        const accountBank = document.getElementById('Account_Bank');
-        const accountCurrency = document.getElementById('Account_Currency');
-
+        const FirstName = document.getElementById('FirstName');
+        const LastName = document.getElementById('LastName');
+        const Unit = document.getElementById('Unit');
+        const Region = document.getElementById('Region');
+        const PostalCode = document.getElementById('PostalCode');
 
         const isEmailAddressValid = validateField(emailAddress, validateEmail, 'Please enter a valid email address.');
-        const isEmailAddress2Valid = validateField(emailAddress2, validateEmail, 'Please enter a valid email address.');
-        const isPhoneNumberValid = validateField(phoneNumber, validatePhoneNumber, 'Please enter a valid phone number.');
-        const isPhoneNumber2Valid = validateField(phoneNumber2, validatePhoneNumber, 'Please enter a valid phone number.');
+        const isPhoneNumberValid = validateField(phoneNumber, validatePhoneNumber, 'Phone number cannot be empty.');
         const isAddressValid = validateField(address, validateAddress, 'Address cannot be empty.');
-        const isAccountNameValid = validateField(accountName, validateAccountName, 'Account name cannot be empty.');
-        const isAccountIBANValid = validateField(accountIBAN, validateAccountIBAN, 'Please enter a valid IBAN.');
-        const isAccountSwiftValid = validateField(accountSwift, validateAccountSwift, 'Please enter a valid Swift/BIC.');
-        const isAccountBankValid = validateField(accountBank, validateAccountBank, 'Account bank name cannot be empty.');
-        const isAccountCurrencyValid = validateField(accountCurrency, validateAccountCurrency, 'Account currency cannot be empty.');
-
-        if (isEmailAddressValid && isEmailAddress2Valid && isPhoneNumberValid && isPhoneNumber2Valid && isAddressValid && isAccountNameValid && isAccountIBANValid && isAccountSwiftValid && isAccountBankValid && isAccountCurrencyValid) {
+        const isFirstNameValid = validateField(FirstName, validateFirstName, 'FirstName cannot be empty.');
+        const isLastNameValid = validateField(LastName, validateLastName, 'LastName cannot be empty.');
+        const isUnitValid = validateField(Unit, validateUnit, 'Unit cannot be empty.');
+        const isRegionValid = validateField(Region, validateRegion, 'Region cannot be empty.');
+        const isPostalCodeValid = validateField(PostalCode, validatePostalCode, 'PostalCode cannot be empty.');
+        const isEmail2Valid = validateField(emailAddress2, validateEmai2valid, 'Please enter a valid email address2.');
+        if (isEmailAddressValid && isPhoneNumberValid && isAddressValid && isFirstNameValid && isLastNameValid && isUnitValid && isRegionValid && isPostalCodeValid && isEmail2Valid) {
 
             submitTenantForm(event);
         } else {
