--- a/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
@@ -337,7 +337,7 @@
                                                     <div class="col-sm-6 col-md-3">
                                                         <div class="mb-3">
                                                             <label for="Vehicles_@(i)__Color">Color:</label>
-                                                            <input type="text" class="form-control" name="Vehicles[@i].Color" id="Vehicles_@(i)__Color" value="@vehicle.Color">
+                                                            <input type="color" class="form-control" name="Vehicles[@i].Color" id="Vehicles_@(i)__Color" value="@vehicle.Color">
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6 col-md-3">
