--- a/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
@@ -318,19 +318,19 @@
                                                 <div class="row vehicleEntry">
                                                     <div class="col-sm-6 col-md-3">
                                                         <div class="mb-3">
-                                                            <label for="Vehicles_@(i)__Manufacturer">Manufacturer:</label>
+                                                            <label for="Vehicles_@(i)__Manufacturer">Make:</label>
                                                             <input type="text" class="form-control" name="Vehicles[@i].Manufacturer" id="Vehicles_@(i)__Manufacturer" value="@vehicle.Manufacturer">
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6 col-md-3">
                                                         <div class="mb-3">
-                                                            <label for="Vehicles_@(i)__ModelName">Model Name:</label>
+                                                            <label for="Vehicles_@(i)__ModelName">Model:</label>
                                                             <input type="text" class="form-control" name="Vehicles[@i].ModelName" id="Vehicles_@(i)__ModelName" value="@vehicle.ModelName">
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6 col-md-3">
                                                         <div class="mb-3">
-                                                            <label for="Vehicles_@(i)__ModelVariant">Model Variant:</label>
+                                                            <label for="Vehicles_@(i)__ModelVariant">License Plate:</label>
                                                             <input type="text" class="form-control" name="Vehicles[@i].ModelVariant" id="Vehicles_@(i)__ModelVariant" value="@vehicle.ModelVariant">
                                                         </div>
                                                     </div>
@@ -684,19 +684,19 @@
         var newVehicleHTML = `<div class="row vehicleEntry">
                                                 <div class="col-sm-6 col-md-3">
                                                     <div class="mb-3">
-                                                        <label for="Vehicles_${vehicleIndex}__Manufacturer">Manufacturer:</label>
+                                                        <label for="Vehicles_${vehicleIndex}__Manufacturer">Make:</label>
                                                         <input type="text" class="form-control" name="Vehicles[${vehicleIndex}].Manufacturer" id="Vehicles_${vehicleIndex}__Manufacturer">
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-6 col-md-3">
                                                     <div class="mb-3">
-                                                        <label for="Vehicles_${vehicleIndex}__ModelName">Model Name:</label>
+                                                        <label for="Vehicles_${vehicleIndex}__ModelName">Model:</label>
                                                         <input type="text" class="form-control" name="Vehicles[${vehicleIndex}].ModelName" id="Vehicles_${vehicleIndex}__ModelName">
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-6 col-md-3">
                                                     <div class="mb-3">
-                                                        <label for="Vehicles_${vehicleIndex}__ModelVariant">Model Variant:</label>
+                                                            <label for="Vehicles_${vehicleIndex}__ModelVariant">License Plate:</label>
                                                         <input type="text" class="form-control" name="Vehicles[${vehicleIndex}].ModelVariant" id="Vehicles_${vehicleIndex}__ModelVariant">
                                                     </div>
                                                 </div>
