--- a/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
@@ -73,7 +73,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <input type="hidden" id="DocumentBase64" name="Document">
-                                        <input type="hidden" id="PictureBase64" name="Picture">
+                                        <input type="hidden" id="PictureBase64" name="Picture" value="@Model?.Picture">
                                         <input type="hidden" id="TenantId" name="TenantId" value="@Model?.TenantId" />
                                         <!-- First Name -->
                                         <div class="col-sm-6 col-md-3">
